# zapcmd

./: .env.keys  .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.cjs  settings.html  sh.exe.stackdump  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  tsconfig.test.json  visual.html  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
.ai/: AGENTS.md  TOOL.md
.claude/: gsd-file-manifest.json  settings.json  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: animation.rs  app_state.rs  autostart.rs  bounds.rs  command_catalog.rs  hotkeys.rs  lib.rs  main.rs  startup.rs  terminal.rs  windowing.rs
src-tauri/src/animation/: mod.rs  scheduler.rs  size_cache.rs  tests_logic.rs
src-tauri/src/bounds/: tests_logic.rs
src-tauri/src/command_catalog/: contracts.rs  prerequisites.rs  read.rs  scan.rs  tests_io.rs
src-tauri/src/command_catalog/prerequisites/: cache.rs  mod.rs  probe.rs  process.rs  tests.rs  types.rs
src-tauri/src/startup/: tests_logic.rs
src-tauri/src/terminal/: cache.rs  commands.rs  discovery.rs  discovery_cache.rs  execution.rs  execution_common.rs  execution_posix.rs  execution_windows.rs  launch_posix.rs  singleflight.rs  tests_cache.rs  tests_discovery.rs  tests_exec.rs  windows_launch.rs  windows_routing.rs
(+1122 files in other folders)
