[package]
name = "zapcmd"
version = "1.1.0"
description = "ZapCmd desktop launcher"
authors = ["zapcmd contributors"]
edition = "2021"

[lib]
name = "zapcmd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["time"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_UI_Shell"] }
